--- a/style.css
+++ b/style.css
@@ -29,14 +29,14 @@
 }
   
 .navigator a:hover {
-    background-color: #ddd; 
-    color: #000; 
+    background-color: #ddd;
+    color: #000;
     transition: background-color 0.3s ease; 
 }
   
 .navigator a.active {
-    background-color: #007bff; 
-    color: #fff; /
+    background-color: #007bff;
+    color: #fff;
 }
 
 .h2{
@@ -65,7 +65,7 @@ img {
   
 .card img {
     width: 100%; 
-    height: auto; 
+    height: 100%; 
     margin-bottom: 1px;
 }
   
@@ -158,4 +158,17 @@ img {
     border-bottom: 1px solid #ddd; 
 }
   
-  
+.info{
+    list-style-type: none;
+}
+.nav{
+    list-style-type: none;
+}
+
+.nav {
+    display: flex; 
+}
+   
+.nav li { 
+    margin-right: 10px; 
+}
