--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ img {
 
 .container {
     width: 100%;
+    margin-right: 0px;
     margin-left: 0px;
     display: grid; 
     grid-template-columns: 0.4fr 1.6fr; 
